WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190636
window.performance should not become null after the window loses its browsing context
https://bugs.webkit.org/show_bug.cgi?id=190636
Summary
window.performance should not become null after the window loses its browsing...
Chris Dumez
Reported
2018-10-16 13:29:15 PDT
window.performance should not become null after the window loses its browsing context. This WebKit behavior does not match the HTML specification nor the behavior of other browsers.
Attachments
Patch
(12.45 KB, patch)
2018-10-16 13:32 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-10-16 13:32:06 PDT
Created
attachment 352495
[details]
Patch
Chris Dumez
Comment 2
2018-10-16 16:43:15 PDT
Comment on
attachment 352495
[details]
Patch Clearing flags on attachment: 352495 Committed
r237209
: <
https://trac.webkit.org/changeset/237209
>
Chris Dumez
Comment 3
2018-10-16 16:43:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-10-16 16:44:23 PDT
<
rdar://problem/45323081
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug