window.performance should not become null after the window loses its browsing context https://bugs.webkit.org/show_bug.cgi?id=190636

Reviewed by Ryosuke Niwa.

Source/WebCore:

window.performance should not become null after the window loses its browsing context. This
WebKit behavior does not match the HTML specification nor the behavior of other browsers.

Also note that the attribute is not nullable in the specification:
- https://www.w3.org/TR/navigation-timing/#sec-window.performance-attribute

No new tests, updated existing test.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::performance const):
* page/Performance.cpp:
(WebCore::Performance::Performance):
* page/Performance.h:
* platform/GenericTaskQueue.h:
(WebCore::TaskDispatcher::TaskDispatcher):
(WebCore::TaskDispatcher::postTask):
(WebCore::GenericTaskQueue::GenericTaskQueue):
(WebCore::GenericTaskQueue::isClosed const):
* workers/WorkerGlobalScope.cpp:
(WebCore::WorkerGlobalScope::WorkerGlobalScope):

LayoutTests:

Extend layout test coverage.

* http/tests/dom/cross-origin-detached-window-properties-expected.txt:
* http/tests/dom/cross-origin-detached-window-properties.html:
* http/tests/dom/same-origin-detached-window-properties-expected.txt:
* http/tests/dom/same-origin-detached-window-properties.html:

Canonical link: https://commits.webkit.org/205580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237209 268f45cc-cd09-0410-ab3c-d52691b4dbfc