Source/WebCore/platform/GenericTaskQueue.h
@@ -35,18 +35,19 @@ namespace WebCore {
 template <typename T>
 class TaskDispatcher {
 public:
-    TaskDispatcher(T& context)
+    TaskDispatcher(T* context)
         : m_context(context)
     {
     }
 
     void postTask(WTF::Function<void()>&& f)
     {
-        m_context.postTask(WTFMove(f));
+        ASSERT(m_context);
+        m_context->postTask(WTFMove(f));
     }
 
 private:
-    T& m_context;
+    T* m_context;
 };
 
 template<>
@@ -74,7 +75,13 @@ public:
     }
 
     GenericTaskQueue(T& t)
+        : m_dispatcher(&t)
+    {
+    }
+
+    GenericTaskQueue(T* t)
         : m_dispatcher(t)
+        , m_isClosed(!t)
     {
     }
 
@@ -106,7 +113,9 @@ public:
         CanMakeWeakPtr<GenericTaskQueue<T>>::weakPtrFactory().revokeAll();
         m_pendingTasks = 0;
     }
+
     bool hasPendingTasks() const { return m_pendingTasks; }
+    bool isClosed() const { return m_isClosed; }
 
 private:
     TaskDispatcher<T> m_dispatcher;
